[package]
name = "binary-merkle-tree"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "A no-std/Substrate compatible library to construct binary merkle tree."
homepage = "https://substrate.io"

[dependencies]
array-bytes = { version = "6.1", optional = true }
log = { version = "0.4", default-features = false, optional = true }
hash-db = { version = "0.16.0", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

[dev-dependencies]
array-bytes = "6.1"
env_logger = "0.9"
sp-core = { path = "../../primitives/core" }
sp-runtime = { path = "../../primitives/runtime" }

[features]
debug = [ "array-bytes", "log" ]
default = [ "debug", "std" ]
std = [ "hash-db/std", "log/std", "sp-core/std", "sp-runtime/std" ]
