[package]
name = "pallet-xcmp-message-stuffer"
authors = ["Anonymous"]
description = "FRAME pallet stuffing xcm messages into an xcmp message which then gets stuff in a MMR then into a Trie"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true}
frame-support = { path = "../../../../substrate/frame/support", default-features = false}
frame-system = { path = "../../../../substrate/frame/system", default-features = false}
pallet-mmr = { path = "../../../../substrate/frame/merkle-mountain-range", default-features = false }
sp-consensus-beefy = { path = "../../../../substrate/primitives/consensus/beefy", default-features = false }
sp-core = { path = "../../../../substrate/primitives/core", default-features = false}
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false }

cumulus-primitives-core = { path = "../../../primitives/core", default-features = false }

[dev-dependencies]
serde = { version = "1.0.188" }

# Substrate
sp-io = { path = "../../../../substrate/primitives/io", default-features = false}
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false}
pallet-balances = { path = "../../../../substrate/frame/balances", default-features = false }

# Polkadot
polkadot-runtime-common = { path = "../../../../polkadot/runtime/common", default-features = false}
xcm = { package = "staging-xcm", path = "../../../../polkadot/xcm", default-features = false}
xcm-executor = { package = "staging-xcm-executor", path = "../../../../polkadot/xcm/xcm-executor", default-features = false}
xcm-builder = { package = "staging-xcm-builder", path = "../../../../polkadot/xcm/xcm-builder", default-features = false}

# Cumulus
cumulus-pallet-xcmp-queue = { path = "../../../pallets/xcmp-queue" }
cumulus-pallet-parachain-system = { path = "../../../pallets/parachain-system", default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
    "cumulus-primitives-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
    "pallet-mmr/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
    "sp-consensus-beefy/std",
	"sp-runtime/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]

